# unfurl

./: Cargo.toml  README.md
.github/workflows/: release.yml
conf/: formats.yml  routes.yml
src/: .main.rs.swp  config.rs  error.rs  fetch.rs  main.rs  parse.rs  route.rs  service.rs
src/service/: github.rs  jira.rs  mod.rs
test/: ex1.txt  ex2.txt  formats.yml
