[package]
name = "unfurl"
version = "0.2.0"
edition = "2021"
description = "A tool for expanding links in text"
repository = "https://github.com/bww/unfurl"
readme = "README.md"
license = "BSD-3-Clause"

[dependencies]
url = "2.4.1"
clap = { version="3.1", features=["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.108"
once_cell = "1.18.0"
bytes = "1.5.0"
futures = "0.3.29"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
addr = "0.15.6"
tinytemplate = "1.1"
